Compilation_Racket_Mips/piton/tests/errors/funcdef_in_if.py
if True:
    def a():
        print_int(1)
